--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/EmmanoelDan/Crud-Users-Api-Rest#readme",
   "devDependencies": {
     "@types/node": "^18.7.13",
+    "sequelize-cli": "^6.4.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
